--- a/src/main/resources/templates/admin/new-user.html
+++ b/src/main/resources/templates/admin/new-user.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>Add New User</h1>
-      <form th:method="POST" th:action="@{/users}" th:object="${user}">
+      <form th:method="POST" th:action="@{/admin/users}" th:object="${user}">
         <input type="text" th:field="*{firstName}" placeholder="First Name" />
-        <input type="text" th:field="*{secondName}" placeholder="Second Name" />
+        <input type="text" th:field="*{lastName}" placeholder="Last Name" />
         <input type="email" th:field="*{email}" placeholder="Email" />
         <input type="text" th:field="*{phone}" placeholder="Phone" />
       <input type="password" th:field="*{password}" placeholder="Password">
