--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -63,3 +63,23 @@ body > a {
 .table a:hover {
   text-decoration: dashed;
 }
+
+#editItemModal {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  border-radius: 15px;
+  padding: 10px;
+  background-color: var(--ctp-latte-crust);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
