--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -38,13 +38,15 @@
               <td th:text="${item.isAvailable()}"></td>
               <td th:text="${item.isOnSale()}"></td>
               <td>
-                <button class="editItemBtn" th:attr="data-id=${item.id},
+                <button class="editItemBtn" th:attr="
+                data-id=${item.id},
                 data-article=${item.article},
                 data-category=${item.category},
                 data-type=${item.type},
                 data-name=${item.name},
                 data-shortDescription=${item.shortDescription},
                 data-fullDescription=${item.fullDescription},
+                data-imgUrl=${item.imgUrl},
                 data-regularPrice=${item.regularPrice},
                 data-salePrice=${item.salePrice},
                 data-quantity=${item.quantity},
@@ -58,13 +60,14 @@
           <div class="modal-content">
             <span class="closeItemModalBtn">&times;</span>
             <form method="post" th:action="@{/admin/items/edit}">
-              <input type="number" name="id" id="itemId" disabled><br>
-              <br type="text" name="article" id="article" placeholder="Article"><br>
+              <input type="number" name="id" id="itemId" readonly="true"><br>
+              <input type="text" name="article" id="article" placeholder="Article"><br>
               <input type="text" name="category" id="category" placeholder="Category"><br>
               <input type="text" name="type" id="type" placeholder="Type"><br>
               <input type="text" name="name" id="name" placeholder="Name"><br>
               <textarea name="shortDescription" id="shortDescription" placeholder="Short Description"></textarea><br>
               <textarea name="fullDescription" id="fullDescription" placeholder="Full Description"></textarea><br>
+              <input type="url" name="imgUrl" id="imgUrl" placeholder="Image URL"><br>
               <input type="number" name="regularPrice" id="regularPrice" placeholder="Regular Price"><br>
               <input type="number" name="salePrice" id="salePrice" placeholder="Sale Price"><br>
               <input type="number" name="quantity" id="quantity" placeholder="Quantity"><br>
