--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -119,8 +119,8 @@
             <div class="modal-content">
               <form method="post" th:action="@{/admin/users/edit}">
                 <input type="number" name="id" id="userId" readonly="true"><br>
-                <input type="text" name="firstname" id="firstname" placeholder="First Name"><br>
-                <input type="text" name="lastname" id="lastname" placeholder="Last Name"><br>
+                <input type="text" name="firstName" id="firstName" placeholder="First Name"><br>
+                <input type="text" name="lastName" id="lastName" placeholder="Last Name"><br>
                 <input type="text" name="email" id="email" placeholder="Email"><br>
                 <input type="text" name="phone" id="phone" placeholder="Phone"><br>
                 <select name="role" id="role">
